const String homeRoute = '/home';
const String loginRoute = '/login';
const String registerRoute = '/register';
const String createRoute = '/create';
const String vueListClub = '/clubs';
const String serverDown = '/serverDown';
